--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@paypal/react-paypal-js": "^7.8.1",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
+    "@tanstack/react-query": "^5.28.6",
+    "@web3modal/wagmi": "^4.1.1",
     "algoliasearch": "^4.20.0",
     "lodash": "^4.17.21",
     "medusa-react": "^9.0.0",
@@ -43,6 +45,7 @@
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
     "tailwindcss-radix": "^2.8.0",
+    "wagmi": "^2.5.12",
     "webpack": "^5"
   },
   "devDependencies": {
