--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
     "tailwindcss-radix": "^2.8.0",
+    "viem": "^2.8.18",
     "wagmi": "^2.5.12",
     "webpack": "^5"
   },
