--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18.2.0",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
+    "recharts": "^2.12.7",
     "tailwindcss-radix": "^2.8.0",
     "wagmi": "^2.5.12",
     "webpack": "^5"
