--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@paypal/react-paypal-js": "^7.8.1",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
-    "@tanstack/react-query": "^5.28.6",
+    "@tanstack/react-query": "4.29.19",
     "@web3modal/wagmi": "^4.1.1",
     "algoliasearch": "^4.20.0",
     "lodash": "^4.17.21",
